--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@
     padding-top: 100px;
     padding-bottom: 100px;
     background-image: url(ImagenPrincipal.jpg);
-    background-size: 1400px 666px;
+    background-size: cover;
     box-shadow: #6f42c1;
 
 }
@@ -64,9 +64,11 @@
 }
 
 .lineaHorizontal {
-    color: #6f42c1;
-    height: 5px;
 
+    justify-content: center;
+    border: 2px solid;
+    border-color: #6f42c1;
+    opacity: 100%;
     background-color: #6f42c1;
 }
 
@@ -85,7 +87,12 @@
 
 }
 
-.textoAbsoluto {}
+.buttonCambiarPagina {
+    margin-right: 20px;
+    border: 1px solid;
+    border-color: 1px solid white;
+}
+
 
 .peliculas:hover {
 
@@ -133,6 +140,67 @@
     align-items: flex-end;
 }
 
+/*.peliculasSmall {
+    height: 150px;
+    width: 100px;
+    margin-right: 30px;
+    border-radius: 25px;
+    cursor: pointer;
+}*/
+
+.Las-Mas-Aclamadas {
+    height: 200px;
+    width: 80%;
+    margin-left: 100px;
+    padding-top: 100px;
+}
+
+
+
+.containerPeliculas {
+    width: 55%;
+    height: 250px;
+    background-color: #0000;
+    overflow-x: scroll;
+    white-space: nowrap;
+}
+
+.peliculasSmall {
+    display: inline-block;
+    margin-right: 20px;
+    border-radius: 25px;
+    height: 180px;
+    width: 130px;
+}
+
+.peliculasSmall:hover {
+    display: block;
+}
+
+/*.containerPeliculas {
+    width: 50%;
+    height: 250px;
+    overflow-x: scroll;
+    overflow-y: hidden;
+}
+*/
+::-webkit-scrollbar {
+    width: 5px;
+    color: white;
+    background: #6f42c1;
+
+}
+
+
+::-webkit-scrollbar-thumb {
+    background: #6f42c1;
+}
+
+::-webkit-scrollbar-track {
+    background: rgb(23, 23, 23);
+}
+
+
 @media (min-width: 768px) {
     #menuPrincipal {
         display: flex;
@@ -144,18 +212,6 @@
 
     }
 
-    #menuPrincipal.logo {
-
-
-
-        /* Alinear a la derecha en pantallas grandes */
-    }
-
-    .listNav {
-
-
-        /* Alinear a la derecha en pantallas grandes */
-    }
 
     .itemNav {
         margin-right: 40px;
